[build-system]
requires = ["vmklib", "wheel", "trove-classifiers"]

[project]
name = "vtelem"
version = "0.3.2"
description = "A real-time telemetry library."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {name = "Vaughn Kottler", email = "vaughnkottler@gmail.com"}
]
maintainers = [
  {name = "Vaughn Kottler", email = "vaughnkottler@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "cerberus",
  "datazen",
  "netifaces",
  "requests",
  "websockets"
]

[project.optional-dependencies]
test = [
  "vmklib",
  "pylint",
  "flake8",
  "pytest",
  "pytest-cov",
  "mypy",
  "black",
  "isort"
]

[project.scripts]
vtelem = "vtelem.entry:main"
